--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/npasher/liri-node-app/issues"
   },
-  "homepage": "https://github.com/npasher/liri-node-app#readme"
+  "homepage": "https://github.com/npasher/liri-node-app#readme",
+  "dependencies": {
+    "spotify-web-api-node": "^3.0.0",
+    "twitter": "^1.7.1"
+  }
 }
