--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/npasher/liri-node-app#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
+    "request": "^2.85.0",
     "spotify-web-api-node": "^3.0.0",
     "twitter": "^1.7.1"
   }
