--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/npasher/liri-node-app#readme",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "fs": "0.0.1-security",
+    "inquirer": "^5.2.0",
     "request": "^2.85.0",
     "spotify-web-api-node": "^3.0.0",
     "twitter": "^1.7.1"
