--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "dotenv": "^5.0.1",
     "fs": "0.0.1-security",
     "inquirer": "^5.2.0",
+    "node-spotify-api": "^1.0.7",
     "request": "^2.85.0",
-    "spotify-web-api-node": "^3.0.0",
+    "spotify-web-api-node": "^3.1.0",
     "twitter": "^1.7.1"
   }
 }
